# claude-auto-continue-macos

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  config.example.toml  patterns.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude_auto_continue/: __init__.py  __main__.py  accessibility.py  browser.py  cli.py  config.py  dashboard.py  dashboard_ui.html  logger.py  menubar.py  monitor.py  notifications.py  permissions.py  remote_patterns.py  setup.py  terminal.py  ui.py  update_check.py
scripts/: install-launchagent.sh  install.sh  open-dashboard.sh  status.sh  uninstall-launchagent.sh  uninstall.sh
tests/: conftest.py  test_browser.py  test_button_matching.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_validation.py  test_logger.py  test_monitor.py  test_notifications.py  test_permissions.py  test_remote_patterns.py  test_terminal_patterns.py  test_ui.py  test_update_check.py
